jvector-native/src/main/java/io/github/jbellis/jvector/vector/cnative/NativeGpuOps.java

    /**
     * {@snippet lang=c :
     * typedef __int_least8_t int_least8_t
     * }
     */
    public static final OfByte int_least8_t = NativeGpuOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __int_least16_t int_least16_t
     * }
     */
    public static final OfShort int_least16_t = NativeGpuOps.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __int_least32_t int_least32_t
     * }
     */
    public static final OfInt int_least32_t = NativeGpuOps.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __int_least64_t int_least64_t
     * }
     */
    public static final OfLong int_least64_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __uint_least8_t uint_least8_t
     * }
     */
    public static final OfByte uint_least8_t = NativeGpuOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef __uint_least16_t uint_least16_t
     * }
     */
    public static final OfShort uint_least16_t = NativeGpuOps.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef __uint_least32_t uint_least32_t
     * }
     */
    public static final OfInt uint_least32_t = NativeGpuOps.C_INT;
    /**
     * {@snippet lang=c :
     * typedef __uint_least64_t uint_least64_t
     * }
     */
    public static final OfLong uint_least64_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef signed char int_fast8_t
     * }
     */
    public static final OfByte int_fast8_t = NativeGpuOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef long int_fast16_t
     * }
     */
    public static final OfLong int_fast16_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long int_fast32_t
     * }
     */
    public static final OfLong int_fast32_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long int_fast64_t
     * }
     */
    public static final OfLong int_fast64_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned char uint_fast8_t
     * }
     */
    public static final OfByte uint_fast8_t = NativeGpuOps.C_CHAR;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast16_t
     * }
     */
    public static final OfLong uint_fast16_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast32_t
     * }
     */
    public static final OfLong uint_fast32_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uint_fast64_t
     * }
     */
    public static final OfLong uint_fast64_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef long intptr_t
     * }
     */
    public static final OfLong intptr_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long uintptr_t
     * }
     */
    public static final OfLong uintptr_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __intmax_t intmax_t
     * }
     */
    public static final OfLong intmax_t = NativeGpuOps.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef __uintmax_t uintmax_t
     * }
     */
    public static final OfLong uintmax_t = NativeGpuOps.C_LONG;

    private static class load_pq_vectors {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("load_pq_vectors"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * jpq_dataset_t *load_pq_vectors(const char *filename)
     * }
     */
    public static FunctionDescriptor load_pq_vectors$descriptor() {
        return load_pq_vectors.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * jpq_dataset_t *load_pq_vectors(const char *filename)
     * }
     */
    public static MethodHandle load_pq_vectors$handle() {
        return load_pq_vectors.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * jpq_dataset_t *load_pq_vectors(const char *filename)
     * }
     */
    public static MemorySegment load_pq_vectors(MemorySegment filename) {
        var mh$ = load_pq_vectors.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("load_pq_vectors", filename);
            }
            return (MemorySegment)mh$.invokeExact(filename);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class free_jpq_dataset {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeGpuOps.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("free_jpq_dataset"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void free_jpq_dataset(jpq_dataset_t *dataset)
     * }
     */
    public static FunctionDescriptor free_jpq_dataset$descriptor() {
        return free_jpq_dataset.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void free_jpq_dataset(jpq_dataset_t *dataset)
     * }
     */
    public static MethodHandle free_jpq_dataset$handle() {
        return free_jpq_dataset.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void free_jpq_dataset(jpq_dataset_t *dataset)
     * }
     */
    public static void free_jpq_dataset(MemorySegment dataset) {
        var mh$ = free_jpq_dataset.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("free_jpq_dataset", dataset);
            }
            mh$.invokeExact(dataset);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class prepare_adc_query {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_LONG
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("prepare_adc_query"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * jpq_adc_t *prepare_adc_query(jpq_dataset_t *dataset, const float *query, int64_t max_nodes)
     * }
     */
    public static FunctionDescriptor prepare_adc_query$descriptor() {
        return prepare_adc_query.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * jpq_adc_t *prepare_adc_query(jpq_dataset_t *dataset, const float *query, int64_t max_nodes)
     * }
     */
    public static MethodHandle prepare_adc_query$handle() {
        return prepare_adc_query.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * jpq_adc_t *prepare_adc_query(jpq_dataset_t *dataset, const float *query, int64_t max_nodes)
     * }
     */
    public static MemorySegment prepare_adc_query(MemorySegment dataset, MemorySegment query, long max_nodes) {
        var mh$ = prepare_adc_query.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("prepare_adc_query", dataset, query, max_nodes);
            }
            return (MemorySegment)mh$.invokeExact(dataset, query, max_nodes);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class compute_dp_similarities_adc {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_LONG
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("compute_dp_similarities_adc"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void compute_dp_similarities_adc(jpq_adc_t *query_handle, const int32_t *node_ids, float *similarities, int64_t n_nodes)
     * }
     */
    public static FunctionDescriptor compute_dp_similarities_adc$descriptor() {
        return compute_dp_similarities_adc.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void compute_dp_similarities_adc(jpq_adc_t *query_handle, const int32_t *node_ids, float *similarities, int64_t n_nodes)
     * }
     */
    public static MethodHandle compute_dp_similarities_adc$handle() {
        return compute_dp_similarities_adc.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void compute_dp_similarities_adc(jpq_adc_t *query_handle, const int32_t *node_ids, float *similarities, int64_t n_nodes)
     * }
     */
    public static void compute_dp_similarities_adc(MemorySegment query_handle, MemorySegment node_ids, MemorySegment similarities, long n_nodes) {
        var mh$ = compute_dp_similarities_adc.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("compute_dp_similarities_adc", query_handle, node_ids, similarities, n_nodes);
            }
            mh$.invokeExact(query_handle, node_ids, similarities, n_nodes);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class free_adc_query {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeGpuOps.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("free_adc_query"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void free_adc_query(jpq_adc_t *query_handle)
     * }
     */
    public static FunctionDescriptor free_adc_query$descriptor() {
        return free_adc_query.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void free_adc_query(jpq_adc_t *query_handle)
     * }
     */
    public static MethodHandle free_adc_query$handle() {
        return free_adc_query.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void free_adc_query(jpq_adc_t *query_handle)
     * }
     */
    public static void free_adc_query(MemorySegment query_handle) {
        var mh$ = free_adc_query.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("free_adc_query", query_handle);
            }
            mh$.invokeExact(query_handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class prepare_query {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("prepare_query"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * jpq_query_t *prepare_query(jpq_dataset_t *dataset, const float *query)
     * }
     */
    public static FunctionDescriptor prepare_query$descriptor() {
        return prepare_query.DESC;
    }
